Fixed playlist scrollbar not working properly.

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ footer,
 =================== */
 
 .pb-10 {
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 .pb-20 {
@@ -316,7 +316,6 @@ nav .icon {
 /*  playlist-menu */
 .playlist-menu {
     flex-grow: 1;
-    min-height: 150px;
 }
 
 .playlist-menu .icon {
@@ -339,8 +338,9 @@ nav .icon {
 
 .playlist-menu ul {
     overflow-y: auto;
-    height: 100%;
-    min-height: 100px;
+    /* 100% minus section h2 and crea playlist button widths*/
+    /* so that scrollbar appears as soon as playlist is overlapped. */
+    height: calc(100% - 66px);
 }
 
 .playlist-menu li {
